--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Ignore .DS_Store (Apple)
+.DS_Store
+
 # Ignore configuration files that may contain sensitive information.
 sites/*/*settings*.php
 
